--- a/src/app/design/editor/signa-editor/signa-editor.component.html
+++ b/src/app/design/editor/signa-editor/signa-editor.component.html
@@ -51,7 +51,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
               }
             </a>
           }
-          <a class="pointer element" (click)="editSigna(editSignaTpl,{email: user.email}, true)"
+          <a class="pointer element" (click)="editSigna(editSignaTpl,{hashAlg:'SHA256',keyAlg:'RSA',keystoreType:'PKCS12',email: user.email}, true)"
             [class.disabled]="offline">
             <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
             Create Signature
