--- a/src/app/design/editor/signa-editor/signa-editor.component.html
+++ b/src/app/design/editor/signa-editor/signa-editor.component.html
@@ -317,9 +317,14 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
         placeholder="ie: Kuching" required>
     </div>
     <div class="form-group mb-3">
+      <label class="form-label">Subject Distinguished Name</label>
+      <input type="text" class="form-control" [(ngModel)]="editSignaData.dn" name="dn" autocomplete="new-text"
+        placeholder="CN=Director, O=Company, C=MY" required>
+    </div>
+    <div class="form-group mb-3">
       <label class="form-label">Password</label>
       <input type="password" class="form-control" [(ngModel)]="editSignaData.password" name="password" autocomplete="new-password"
-        placeholder="ie: changeit">
+        placeholder="ie: password">
     </div>
     <div class="form-check form-switch">
       <input type="checkbox" class="form-check-input" id="showStamp"
