--- a/src/app/design/editor/signa-editor/signa-editor.component.html
+++ b/src/app/design/editor/signa-editor/signa-editor.component.html
@@ -319,7 +319,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
     <div class="form-group mb-3">
       <label class="form-label">Subject Distinguished Name</label>
       <input type="text" class="form-control" [(ngModel)]="editSignaData.dn" name="dn" autocomplete="new-text"
-        placeholder="CN=Director, O=Company, C=MY" required>
+        placeholder="CN=Director, O=Company, C=MY">
     </div>
     <div class="form-group mb-3">
       <label class="form-label">Password</label>
@@ -361,8 +361,13 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
             <input type="number" class="form-control" [(ngModel)]="editSignaData.stampUry" name="stampUry"
               placeholder="ie: 0" required>
           </div>
-        </div>
-        
+        </div>        
+      </div>
+      <div class="text-muted small">
+        Llx = Left side from left<br/>
+        Urx = Right side from left<br/>
+        Ury = Bottom side from bottom<br/>
+        LLy = Top side from bottom
       </div>
     }
     <!-- <div class="form-group mb-3 mt-3">
