Extend support for Secret for - Lookup authentication client secret - Endpoint authentication client secret
Disable autocomplete for field supporting Secret

--- a/src/app/_shared/modal/edit-lookup/edit-lookup.component.html
+++ b/src/app/_shared/modal/edit-lookup/edit-lookup.component.html
@@ -313,8 +313,14 @@
               <div class="form-group mb-3">
                 <label class="form-label">Client Secret *</label>
                 <input type="text" class="form-control"
-                  [(ngModel)]="_lookup.clientSecret" name="clientSecret"
-                  placeholder="ie: 87897jhjd-9182731yye" required>
+                  [(ngModel)]="_lookup.clientSecret" name="clientSecret" list="clientSecretList"
+                  placeholder="ie: 87897jhjd-9182731yye" autocomplete="off" required>
+                  <datalist id="clientSecretList">
+                    @for(secret of secretList; track $index) {
+                      @let secretKey = '{{'+secret.key+'}}';
+                      <option value="{{secretKey}}">Secret: {{secret.key}}</option>
+                    }
+                  </datalist>
               </div>
             </div>
           </div>
