--- a/src/app/design/editor/cogna-editor/cogna-editor.component.html
+++ b/src/app/design/editor/cogna-editor/cogna-editor.component.html
@@ -1294,7 +1294,7 @@
               <label class="form-label">Model API Key/Access Token</label>
               <input type="text" class="form-control form-control-sm" [(ngModel)]="editCognaData.embedModelApiKey"
                 list="embedSecretList"
-                #embedModelApiKey="ngModel" name="embedModelApiKey" required>
+                #embedModelApiKey="ngModel" autocomplete="off" name="embedModelApiKey" required>
 
                 <datalist id="embedSecretList">
                   @for(secret of secretList; track $index) {
@@ -1587,7 +1587,7 @@
               <input type="text" class="form-control form-control-sm"
                 [ngModel]="editCognaData && editCognaData.inferModelApiKey"
                 (ngModelChange)="editCognaData && (editCognaData.inferModelApiKey = $event)" #inferModelApiKey="ngModel"
-                list="inferSecretList"
+                list="inferSecretList" autocomplete="off" 
                 name="inferModelApiKey" required>
 
                 <datalist id="inferSecretList">
